db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: blog-database
  labels:
    app: mongodb
    env: production
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  selector:
    app: mongodb
